--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  padding-top: 50px;
+   padding: 50px 148px 0px 148px;
   text-align: center;
 }
 .Create{
@@ -112,8 +112,8 @@ table, th, td {
   color: #dacb07;
 }
 .cell_row{
-  width: 40px;
-  height: 40px;
+  width: 40pt;
+  height: 40pt;
   font-size: 15px;
   background-color: #ff8080;
   border-style: solid;
@@ -121,4 +121,30 @@ table, th, td {
 }
 .title-table{
   padding-top: 8px;
+}
+.T{
+  text-align: center;
+}
+.headTable {
+  list-style-type: none; 
+  margin:0;
+  padding-left: 0px;
+  text-align: center;
+  overflow: hidden;
+  background-color: #333;
+}
+.list{
+   width: 40pt;
+   height: 40pt;
+   float: left;
+   background-color: #ff8080;
+   border-style: solid;
+   border-width: 2px;
+}
+.list div{
+  display: block;
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  padding: 5px 0px;
 }
